# ons-and-hackathon

app/: .gitignore  .isort.cfg  .pylintrc  Makefile  README.md  __init__.py  api.py  cli.py  main.py  pyproject.toml  templates.py  tox.ini  utilities.py
app/static/: styles.css
app/templates/: base.html
backend/: .mypy.ini  Makefile  __init__.py  main.py  pyproject.toml
gpt-model/: 01_generate_dataset.py  02_train_model.py  README.md  api.py
gpt-model/datasets/: dataset.csv  formatted_data.jsonl  raw_data.json
