[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mebin Abraham <mebin95+work@gmail.com>"]
packages = [
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
coloredlogs = "^14.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
Jinja2 = "^3.1.2"
pandas = "^2.1.1"
openai = "^0.28.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pylint-quotes = "~0"
isort = "^5.6.4"
flake8 = "^3.9.2"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

